--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "eferiado": "^1.1.5",
+    "node-notifier": "^10.0.0",
     "puppeteer": "^5.3.1"
   },
   "devDependencies": {
