fix: updating readme. Addition Extra Goals

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,17 @@
   "cSpell.words": [
     "Caregandoo",
     "Dayget",
+    "Magnus",
+    "Mikael",
+    "Omodei",
+    "Souto",
+    "Vinhas",
     "eferiado",
+    "magnuspedro",
+    "mikaelvinhas",
     "nacionais",
+    "omariosouto",
+    "rafaelomodei",
     "regionais"
   ]
 }
